--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta property="og:title" content="{{ page.title }} | {{ site.name }}" />
-  <title>{{ page.title }} | {{ site.name }}</title>
-  <link rel="icon" sizes="16x16 32x32 48x48 64x64" href="/assets/img/favicon/favicon.ico" />
-  <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon/favicon-152.png" />
-  <style>
-  body {
-    background: #eee;
-    margin: 1em auto;
-    text-align: center;
-  }
-  .content {
-    width: 500px;
-    margin: 0 auto;
-  }
-  h1 {
-    font-size: 3rem;
-    margin: 1em 0;
-  }
-  a {
-    color: #36f;
-    font-weight: bolder;
-    text-decoration: none;
-  }
-  a:hover {
-    color: white;
-    background: #36f;
-  }
-  img {
-    width: 100px;
-    vertical-align: bottom;
-  }
-  </style>
+  <head>
+    <title>{{ page.title }} | {{ site.name }}</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width">
   {% if jekyll.environment != "development" %}
     {% include analytics.html %}
   {% endif %}
-</head>
-<body>
-  <h1>{{ page.title }}</h1>
-  <div class="content">
-    <p>ページが見つかりませんでした。</p>
-    <p><a href="{{ site.url }}">{{ site.name }}のトップページ</a>へ移動するか、<br>
-       下記から検索してみてください。</p>
-    <p>{% include search-bar.html %}</p>
-    <p><a href="{{ site.url }}"><img src="{{ site.logo }}"></a></p>
-  </div>
-</body>
+  </head>
+  <body>
+    <div class="container">
+        <div class="side" id="pc">
+            <img src="/jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+      <div class="main">
+        <div class="content">
+          <h1>404 Not Found</h1>
+          <p>ページが見つかりませんでした。<br><br></p>
+          <a href="{{ site.url }}">{{ site.name }}高速のトップページ</a>
+        </div>
+      </div>
+    </div>
+        <div id="sp" class="side-sp">
+            <img src="/jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+  </body>
 </html>
